Add EAFNOSUPPORT as a possible error if the address family is not supported.  This adds further differentiation between which argument to socket(2) caused the error.  No longer are invalid domain (address family) errors classified as ENOPROTOSUPPORT errors.  This should make socket(2) conform to current POSIX and X/Open standards.  Fixes PR/33676.